# simplify

./: LICENSE  README.md  simplify.cabal
src/: Lib.hs
